--- a/STM32F407-DISC1-LwIP-FreeRTOS.ioc
+++ b/STM32F407-DISC1-LwIP-FreeRTOS.ioc
@@ -5,11 +5,15 @@ CAD.provider=
 ETH.IPParameters=MediaInterface,PHY_Name_RMII
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name_RMII=DP83848_PHY_ADDRESS
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 LWIP.BSP.number=1
+LWIP.DHCP_DEBUG=LWIP_DBG_ON
+LWIP.ICMP_DEBUG=LWIP_DBG_ON
+LWIP.IPParameters=ICMP_DEBUG,DHCP_DEBUG
 LWIP.Version=v2.1.2_Cube
 LWIP0.BSP.STBoard=false
 LWIP0.BSP.api=BSP_COMPONENT_DRIVER
@@ -29,7 +33,8 @@ Mcu.IP2=LWIP
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -60,23 +65,24 @@ Mcu.Pin30=PA12
 Mcu.Pin31=PA13
 Mcu.Pin32=PA14
 Mcu.Pin33=PC10
-Mcu.Pin34=PC12
-Mcu.Pin35=PD4
-Mcu.Pin36=PD5
-Mcu.Pin37=PB3
-Mcu.Pin38=PB6
-Mcu.Pin39=PB9
+Mcu.Pin34=PC11
+Mcu.Pin35=PC12
+Mcu.Pin36=PD4
+Mcu.Pin37=PD5
+Mcu.Pin38=PB3
+Mcu.Pin39=PB6
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PE1
-Mcu.Pin41=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin42=VP_LWIP_VS_Enabled
-Mcu.Pin43=VP_SYS_VS_tim6
+Mcu.Pin40=PB9
+Mcu.Pin41=PE1
+Mcu.Pin42=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin43=VP_LWIP_VS_Enabled
+Mcu.Pin44=VP_SYS_VS_tim6
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=44
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -214,13 +220,10 @@ PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
-PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
-PC10.GPIO_Mode=GPIO_MODE_AF_PP
-PC10.GPIO_PuPd=GPIO_NOPULL
-PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC10.Locked=true
-PC10.Signal=I2S3_CK
+PC10.Mode=Asynchronous
+PC10.Signal=USART3_TX
+PC11.Mode=Asynchronous
+PC11.Signal=USART3_RX
 PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
@@ -340,7 +343,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LWIP_Init-LWIP-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LWIP_Init-LWIP-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -379,6 +382,8 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_LWIP_VS_Enabled.Mode=Enabled
