reconfigure FreeRTOS with runtime statistic and stack watermarking for kernel-aware debugging

--- a/STM32F407-DISC1-LwIP-FreeRTOS.ioc
+++ b/STM32F407-DISC1-LwIP-FreeRTOS.ioc
@@ -6,8 +6,10 @@ ETH.IPParameters=MediaInterface,PHY_Name_RMII
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name_RMII=DP83848_PHY_ADDRESS
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.IPParameters=Tasks01,FootprintOK,configRECORD_STACK_HIGH_ADDRESS,configGENERATE_RUN_TIME_STATS
 FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configGENERATE_RUN_TIME_STATS=1
+FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
 File.Version=6
 KeepUserPlacement=false
 LWIP.BSP.number=1
